fix: 메인 빠른예약 팝업 연동 및 z-index 수정

--- a/apps/src/assets/css/style.css
+++ b/apps/src/assets/css/style.css
@@ -20,7 +20,7 @@ body.h100 {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 4;
+  z-index: 1000;
 }
 .pop:before {
   content: '';
